--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "real-state",
+  "name": "real-estate",
   "version": "1.0.0",
   "description": "Real State Site",
   "main": "index.js",
